@@ -5,24 +5,25 @@ Priority list:
 BUGS:
 - add window resize support to hints
 - can't reverse tab through the vimperator toolbar
-- gu and gU don't work on local files properly - still valid? Doesn't work on Windows.
+- gu and gU doesn't work on Windows.
 - pvh option not working
 - searching backwards incrementally does not work i.e. with 'incsearch' set
+- http://msdn2.microsoft.com/en-us/library/ms535258.aspx does not scroll with j/k/etc.
+  same for http://forum.mootools.net/topic.php?id=3458
 
 FEATURES:
 9 :command for new commands
-9 :map a :bmark<space> and A should toggle the "starred" (=bookmarked) state of the current url
-8 add an interface for navigating document relationships including usage of
-  the ] and [ keys to e.g. jump to the next heading ]], next image ]i, previous
-  textbox [t and so on
 8 middleclick in content == p, and if command line is open, paste there the clipboard buffer
 8 autocommands (BrowserStart, BrowserQuit, TabClose, TabOpen, TabChanged, PreLocationChange, PageLoaded, any more?)
 8 :sidebar improvements (:sidebar! Downloads while downloads is open should refocus the sidebar)
+8 ;?<hint> will show information about <hint> like id, class, image filename, etc.
+8 there should be a listbox/combobox mode
 7 use ctrl-n/p in insert mode for word completion
 7 implement LocationList window, and get rid off/change PreviewWindow to be a real preview window being able to display html pages
 7 [ctrl-o/i] to Go back to a Previous Position (done partly, however currenty does not use a per tab jumplist)
 7 whereever possible: get rid of dialogs and ask console-like dialog questions or write error prompts directly on the webpage or with :echo()
 7 :set! should also set about:config options (with autocomplete)
+6 jump to the next heading with ]h, next image ]i, previous textbox [t and so on
 6 :grep support (needs location list)
 6 use '' to jump between marks like vim
 6 pipe selected text/link/website to an external command
